fixed too much padding in chats

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ body {
 
 #development-group {
   display: flex;
-  padding-left: 30px;
+  padding-left: 20px;
   padding-right: 30px;
   padding-top:10px;
   padding-bottom:10px;
